--- a/powerbi-example.html
+++ b/powerbi-example.html
@@ -27,11 +27,12 @@
     <div class="container">
         <div class="box">
             <h2>Div 1</h2>
-            <p>Este es el primer div. Puedes agregar cualquier contenido aquí.</p>
+            <p>Informe Público .</p>
+<iframe title="informe validaciones prod sin filtros raw" width="600" height="373.5" src="https://app.fabric.microsoft.com/view?r=eyJrIjoiMjE5YzM4ZDktZTNjMC00ZWUwLWJhOGItZjRkZTE5MjcwNjAyIiwidCI6ImVhZmZmOThlLTc5YTUtNGJiNS05MThmLTBhN2ExNGM0YmJlZiIsImMiOjR9&pageName=df6f72d610719a53760c" frameborder="0" allowFullScreen="true"></iframe>
         </div>
         <div class="box">
             <h2>Div 2</h2>
-            <p>Este es el segundo div. A continuación se muestra un enlace de Power BI:</p>
+            <p>Informe Privado:</p>
             <iframe title="informe validaciones prod sin filtros raw" width="1140" height="541.25" src="https://app.fabric.microsoft.com/reportEmbed?reportId=00cc9569-5f3e-4591-864b-a0ffac54fad3&autoAuth=true&ctid=eafff98e-79a5-4bb5-918f-0a7a14c4bbef" frameborder="0" allowFullScreen="true"></iframe>
         </div>
     </div>
